# termify

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/server/: .env.example  package.json
apps/server/prisma/: schema.prisma
apps/server/scripts/: generate-vapid-keys.ts
apps/server/src/: index.ts
apps/server/src/api/: apikeys.ts  auditlogs.ts  auth.ts  categories.ts  claude-sessions.ts  notifications.ts  personal-task-boards.ts  personal-tasks.ts  profiles.ts  push.ts  servers.ts  share.ts  snippets.ts  task-commands.ts  task-status.ts  tasks.ts  team-history.ts  team-presence.ts  team-roles.ts  team-servers.ts  team-snippets.ts  team-task-status.ts  team-terminals.ts  team-workspaces.ts  teams.ts  terminal-queue.ts  terminals.ts  users.ts  workspace-share.ts  workspaces.ts
apps/server/src/auth/: jwt.ts  middleware.ts
apps/server/src/ephemeral/: EphemeralTerminalManager.ts
apps/server/src/lib/: type-mappers.ts
apps/server/src/pty/: OutputBuffer.ts  PTYManager.ts
apps/server/src/services/: CollaborationService.ts  EmailService.ts  NotificationService.ts  PushService.ts  ServerStatsService.ts  (+2 more)
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
apps/web/.claude/: CLAUDE.md
apps/web/public/: manifest.json  sw.js
docker/: .env.example  Dockerfile.server  Dockerfile.server.dev  Dockerfile.web  Dockerfile.web.dev  docker-compose.dev.yml  docker-compose.yml
prisma/: schema.prisma
tools/stats-agent/: .gitignore  Cargo.toml  README.md
tools/stats-agent/src/: main.rs
(+221 files in other folders)
